--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,7 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_PREFIX: ${{ github.repository_owner }}
+  IMAGE_NAME: hpc-mcp-server
 
 jobs:
   release:
@@ -38,73 +39,55 @@ jobs:
             echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
           fi
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - name: Install Podman + qemu
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y podman qemu-user-static
+          sudo podman run --privileged --rm docker.io/tonistiigi/binfmt --install all
+          podman --version
 
-      - name: Log in to GHCR
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Log in to GHCR (Podman)
+        run: |
+          echo "${{ secrets.GITHUB_TOKEN }}" | podman login ${{ env.REGISTRY }} --username "${{ github.actor }}" --password-stdin
 
-      - name: Build and push Slurm MCP
-        uses: docker/build-push-action@v5
-        with:
-          context: mcp-servers/slurm
-          file: mcp-servers/slurm/Containerfile
-          push: true
-          tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}/slurm-mcp-server:${{ steps.version.outputs.VERSION }}
-            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}/slurm-mcp-server:latest
-          platforms: linux/amd64,linux/arm64
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+      - name: Build multi-arch manifest (Podman)
+        env:
+          IMAGE: ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}/${{ env.IMAGE_NAME }}
+        run: |
+          podman manifest create ${IMAGE}:${{ steps.version.outputs.VERSION }}
+          for ARCH in amd64 arm64; do
+            podman build \
+              --platform linux/${ARCH} \
+              --manifest ${IMAGE}:${{ steps.version.outputs.VERSION }} \
+              -f mcp-servers/hpc_mcp_server/Containerfile \
+              mcp-servers/hpc_mcp_server
+          done
 
-      - name: Build and push Flux MCP
-        uses: docker/build-push-action@v5
-        with:
-          context: mcp-servers/flux
-          file: mcp-servers/flux/Containerfile
-          push: true
-          tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}/flux-mcp-server:${{ steps.version.outputs.VERSION }}
-            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}/flux-mcp-server:latest
-          platforms: linux/amd64,linux/arm64
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-      - name: Build and push Workload
-        uses: docker/build-push-action@v5
-        with:
-          context: workloads
-          file: workloads/Containerfile
-          push: true
-          tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}/sc25-workload:${{ steps.version.outputs.VERSION }}
-            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}/sc25-workload:latest
-          platforms: linux/amd64,linux/arm64
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+      - name: Push manifests
+        env:
+          IMAGE: ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}/${{ env.IMAGE_NAME }}
+        run: |
+          podman manifest push --all ${IMAGE}:${{ steps.version.outputs.VERSION }} ${IMAGE}:${{ steps.version.outputs.VERSION }}
+          podman manifest push --all ${IMAGE}:${{ steps.version.outputs.VERSION }} ${IMAGE}:latest
 
       - name: Generate release notes
+        env:
+          IMAGE: ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}/${{ env.IMAGE_NAME }}
         run: |
-          cat > release-notes.md <<EOF
+          cat > release-notes.md <<EOT
           # Release ${{ steps.version.outputs.VERSION }}
           
-          ## Container Images
+          ## Container Image
           
-          - \`ghcr.io/${{ env.IMAGE_PREFIX }}/slurm-mcp-server:${{ steps.version.outputs.VERSION }}\`
-          - \`ghcr.io/${{ env.IMAGE_PREFIX }}/flux-mcp-server:${{ steps.version.outputs.VERSION }}\`
-          - \`ghcr.io/${{ env.IMAGE_PREFIX }}/sc25-workload:${{ steps.version.outputs.VERSION }}\`
+          - \`${IMAGE}:${{ steps.version.outputs.VERSION }}\`
           
           ## What's Changed
           
-          EOF
+          EOT
           
-          PREVIOUS_TAG=\$(git describe --tags --abbrev=0 HEAD^ 2>/dev/null || echo "")
-          if [ -n "\$PREVIOUS_TAG" ]; then
-            git log \${PREVIOUS_TAG}..HEAD --oneline --pretty=format:"- %s (%h)" >> release-notes.md
+          PREVIOUS_TAG=$(git describe --tags --abbrev=0 HEAD^ 2>/dev/null || echo "")
+          if [ -n "$PREVIOUS_TAG" ]; then
+            git log ${PREVIOUS_TAG}..HEAD --oneline --pretty=format:"- %s (%h)" >> release-notes.md
           else
             echo "Initial release" >> release-notes.md
           fi
