chore: address review feedback
Signed-off-by: kush-gupt <kushalgupta@gmail.com>

--- a/manifests/hpc-mcp-server/base/deployment.yaml
+++ b/manifests/hpc-mcp-server/base/deployment.yaml
@@ -18,7 +18,7 @@ spec:
       serviceAccountName: hpc-mcp-sa
       containers:
         - name: hpc-mcp-server
-          image: quay.io/kugupta/hpc-mcp-server:latest
+          image: ghcr.io/kush-gupt/hpc-mcp-server:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 5000
